8251451: Shenandoah: Remark ObjectSynchronizer roots with I-U

Reviewed-by: shade